<resources>
    <string name="app_name">Mediscan</string>
    <string name="mediscan">Mediscan</string>
    <string name="title_motion1">Scanning receipt</string>
    <string name="subtitle_motion1">Easily convert</string>
    <string name="desc_motion2">Recommended features for the read receipt doctor and Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>
    <string name="drug_name">Imboost</string>
    <string name="drug">Obat</string>
    <string name="result">Drug Result</string>
    <string name="imboost">Imboost</string>
    <string name="drug_type">Vitamin &amp; Suplemen</string>
    <string name="description">Deskripsi</string>
    <string name="durg_desc">IMBOOST TABLET merupakan suplemen dengan kandungan Echinacea purpurea herb dry extract dan Zn Piccolinate dalam bentuk tablet salut selaput. Suplemen ini digunakan untuk membantu memelihara daya tahan tubuh.</string>
    <string name="durg_dose">Dewasa : 3 kali sehari 1 tablet</string>
    <string name="resep">Resep Dokter</string>
    <string name="dose">Dosis</string>
    <string name="durg_komp">Echinacea 250 mg, Zinc Picolinate 10 mg</string>
    <string name="composision">Komposisi</string>
    <string name="aturan">Aturan Pakai</string>
    <string name="drug_rules">Sesudah makan</string>
    <string name="drug_saving">Simpan ditempat sejuk dan kering, terlindung dari cahaya matahari</string>
    <string name="save">Cara Penyimpanan</string>
    <string name="golongan">Golongan Obat</string>
    <string name="efek">Efek Samping</string>
    <string name="drug_golongan">Obat Bebas</string>
    <string name="blank"> </string>
    <string name="singin_google">Sign In with google</string>
    <string name="title2">Scanning Drugs</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="content">Content</string>
    <string name="link">Link</string>
    <string name="source">Source :</string>
    <string name="title3">Get Information</string>
    <string name="start">Get Started</string>
    <string name="maps">Location</string>
    <string name="handwriting">Scan Receipts</string>
    <string name="titlehandwritin">See Doctor Receipts</string>
    <string name="titlehandocr">What is the Drug?</string>
    <string name="ocr">Scan Drug</string>
    <string name="apotekLoc">Check Your\nNearby Drugstore !</string>
    <string name="term"> A Licensing Agreement is a legal document between the Licensor, the person who owns</string>
    <string name="home">Home</string>
    <string name="article">Article</string>
    <string name="profil">Profile</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="name">Nama</string>
    <string name="predict">Predict Now</string>
    <string name="hint">Search Drug</string>
    <string name="hello">Hello,</string>
    <string name="logout">Log out</string>
    <string name="retry">Try again</string>
    <string name="location">My Location</string>
    <string name="error">Please Check Your Connections</string>
</resources>