<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/drug"
        android:enabled="true"
        android:icon="@drawable/drug_icon"
        android:title="@string/drug" />
    <item
        android:id="@+id/none2"
        android:title=""
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/article"
        android:enabled="true"
        android:icon="@drawable/article"
        android:title="@string/article" />
    <item
        android:id="@+id/profil"
        android:enabled="true"
        android:icon="@drawable/person"
        android:title="@string/profil" />
</menu>