<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.resultdrug.ResultDrugActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageDrug"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:scaleType="centerCrop"
                    android:background="@drawable/imbosst"
                    android:layout_gravity="center"/>

                <ImageView
                    android:id="@+id/buttonBack"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/card_button"
                    android:clickable="true"
                    android:padding="5dp"
                    android:src="@drawable/arrow_black" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/namaObat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/livvic_bold"
                        android:text="@string/imboost"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/resep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/livvicmedium"
                        android:text="@string/resep"
                        android:textColor="@color/red"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/deskripsiObatTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/livvic_bold"
                        android:text="@string/desc"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/deskripsiObat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/livvicmedium"
                        android:justificationMode="inter_word"
                        android:text="@string/durg_desc"
                        android:textColor="@color/grey"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/dosisTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/livvic_bold"
                        android:text="@string/dose"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/dosisObat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/livvicmedium"
                        android:text="@string/durg_dose"
                        android:textColor="@color/grey"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/komposisititle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/livvic_bold"
                        android:text="@string/composision"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/komposisiObat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/livvicmedium"
                        android:justificationMode="inter_word"
                        android:text="@string/durg_komp"
                        android:textColor="@color/grey"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/aturantitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/livvic_bold"
                        android:layout_marginTop="20dp"
                        android:text="@string/aturan"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/aturanObat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/livvicmedium"
                        android:text="@string/drug_rules"
                        android:textColor="@color/grey"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/simpantitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/livvic_bold"
                        android:text="@string/save"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/simpanObat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/livvicmedium"
                        android:justificationMode="inter_word"
                        android:text="@string/drug_saving"
                        android:textColor="@color/grey"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/golongantitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/livvic_bold"
                        android:text="@string/golongan"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/golonganObat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/livvicmedium"
                        android:text="@string/drug_golongan"
                        android:textColor="@color/grey"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/efektitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/livvic_bold"
                        android:text="@string/efek"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/efekObat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="30dp"
                        android:fontFamily="@font/livvicmedium"
                        android:text="@string/drug_golongan"
                        android:textColor="@color/grey"
                        android:textSize="16sp" />

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>


    </FrameLayout>

</ScrollView>