<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.result.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="32dp"
            app:cardCornerRadius="25dp">

            <ImageView
                android:id="@+id/previewImageView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/result"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_predict"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:layout_marginEnd="30dp"
                android:text="@string/predict"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/retry_button"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:layout_marginStart="30dp"
                android:text="@string/retry"
                app:cornerRadius="5dp"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/livvic_bold"
            android:text="@string/result"
            android:textColor="@color/blue"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/tv_item_name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/livvic_bold"
                android:textColor="@color/blue"
                android:layout_marginStart="20dp"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="8dp"
                tools:text="@string/drug" />

            <TextView
                android:id="@+id/tv_item_name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/livvic_bold"
                android:textColor="@color/blue"
                android:layout_marginStart="20dp"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="8dp"
                tools:text="@string/drug" />

            <TextView
                android:id="@+id/tv_item_name3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/livvic_bold"
                android:textColor="@color/blue"
                android:layout_marginStart="20dp"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="8dp"
                tools:text="@string/drug" />

            <TextView
                android:id="@+id/tv_item_name4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/livvic_bold"
                android:textColor="@color/blue"
                android:layout_marginStart="20dp"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="8dp"
                tools:text="@string/drug" />

            <TextView
                android:id="@+id/tv_item_name5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/livvic_bold"
                android:textColor="@color/blue"
                android:layout_marginStart="20dp"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="8dp"
                tools:text="@string/drug" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>